--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Hello World?</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>The Wealth and Health of Nations</title>
+  </head>
+  <body>
+    <h1>The Wealth and Health of Nations</h1>
+    <p id="chart_area"></p>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+  </body>
+</html>
