--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body>
     <h1>The Wealth and Health of Nations</h1>
     <p id="chart_area"></p>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
   </body>
 </html>
