--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
   <head>
     <title>The Wealth and Health of Nations</title>
+    <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
     <h1>The Wealth and Health of Nations</h1>
+    <svg class="chart">
+      <circle cx="25" cy="25" r="15" class="circ1">
+    </svg>
     <p id="chart_area"></p>
     <script src="https://d3js.org/d3.v3.min.js"></script>
   </body>
